--- a/src/Services/Basket/appsettings.json
+++ b/src/Services/Basket/appsettings.json
@@ -2,6 +2,9 @@
   "CacheSettings": {
     "ConnectionString": "localhost:6379"
   },
+  "DiscountGrpcConnection": {
+    "ConnectionString": "https://localhost:5002"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
