--- a/src/IdentityServer/Properties/launchSettings.json
+++ b/src/IdentityServer/Properties/launchSettings.json
@@ -8,6 +8,16 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:5006;http://localhost:8006"
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
