--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -7,7 +7,10 @@
         "catalog": "StartDebugging",
         "basket": "StartDebugging",
         "discount.grpc": "StartDebugging",
-        "order": "StartDebugging"
+        "order": "StartDebugging",
+        "ocelotapigw": "StartDebugging",
+        "identityserver": "StartDebugging",
+        "client": "StartDebugging"
       }
     }
   }
