--- a/src/Client/appsettings.docker.json
+++ b/src/Client/appsettings.docker.json
@@ -1,5 +1,6 @@
 {
   "apiUrl": "http://ocelotapigw:80",
+  "flaskApi": "http://flask-app:80",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
