--- a/src/Client/appsettings.json
+++ b/src/Client/appsettings.json
@@ -3,6 +3,7 @@
     "DefaultConnection": "Server=STEPAN;Database=IdentityBookShopDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "apiUrl": "https://localhost:5005",
+  "flaskApi": "http://localhost:5010",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
