--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -184,6 +184,21 @@ services:
       - ocelotapigw
       - identitydb
 
+  flask-app:
+    build:
+      context: ./Warehouse.API  # Path to the folder containing Dockerfile
+    container_name: flask-api
+    ports:
+      - "8007:80"
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/
+    depends_on:
+      - mongo
+    volumes:
+      - ./Warehouse.API:/app  # Map the folder to the container
+    networks:
+      - bookapp
+
 volumes:
   mongo_data:
   # discountdb_data:
